--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,1 +1,23 @@
-<h1>Example App: Home</h1>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="/">SCRAPER HOME</a>
+    <ul>
+        <li><a href="/scrape" class="">Scrape the Headlines</a></li>
+        <li><a href="/saved" class="">Saved Headlines</a></li>
+        <li><a href="/deleted" class="">Deleted</a></li>
+    </ul>
+</nav>
+
+<div class="container">
+    <h1> Mongo Scrapes San Diego Balboa Theatre's Website</h1>
+</div>
+
+<footer class"footer">
+    <div class="container">
+        <p>Mongo Scraper created by Marina Delkova-Moro</p>
+    </div>
+</footer>
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script src"../..assets/javascript/saved.js"> </script>
