--- a/views/saved.handlebars
+++ b/views/saved.handlebars
@@ -9,14 +9,10 @@
 
 <div class="container">
     <h1> Saved Headlines </h1>
-    <p>Your saved </p>
+    <p>Your saved headlines </p>
 </div>
 
-<footer class"footer">
-    <div class="container">
-        <p>Mongo Scraper created by Marina Delkova-Moro</p>
-    </div>
-</footer>
+
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
